# orderbook

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  add_order.hpp  continous_orderbook_spec.md  itch.cpp  itch.hpp  matching_engine_spec.md  speeding_up_to_dos.md  tests_outline.md  to-dos.md
.github/workflows/: cmake-single-platform.yml
include/: feed_handler.hpp  feed_handler_xdp.hpp  flat_hash_map.hpp  itch.hpp  ladder_side.hpp  matching_engine.hpp  moldudp64.hpp  order_pool.hpp  orderbook.hpp  packet_pool.hpp  spsc_ring.hpp  tsc.hpp
results/: get_results.py  plot.py  results.txt  statistics.py
results/previous_results/: changes.txt  results_2.txt  results_3.txt
src/: add_order.cpp  engine_udp.cpp  feed_handler.cpp  feed_handler_xdp.cpp  itch.cpp  itch.hpp  main.cpp  matching_engine.cpp  matching_engine.hpp  order_matching.cpp  order_matching.hpp  orderbook.cpp  orderbook.hpp  replay.cpp  test.cpp  test.hpp
tests/: test.cpp
